--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
         alt=""></div>
     <div style="text-align: center;">Joining together your ideas with our
       expertise. </div>
+      <br>
+      <div style="text-align: center;"><img src="images/logo2.png"
+
+        alt=""></div>
     <div style="text-align: center;">- Coming Soon -</div>
   </body>
 </html>
