--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <title>test</title>
   </head>
   <body>
-    <div style="text-align: center;"><img src="file:///D:/Work/Consuit/logo.png"
+    <div style="text-align: center;"><img src="images/logo.png"
         alt=""></div>
-    <div style="text-align: center;"><img src="file:///D:/Work/Consuit/logo2.png"
+    <div style="text-align: center;"><img src="images/logo2.png"
         alt="" style="width: 381px; height: 161px;"></div>
     <div style="text-align: center;">Joining together your ideas with our
       expertise. </div>
