--- a/index.html
+++ b/index.html
@@ -5,10 +5,21 @@
     <title>test</title>
   </head>
   <body>
-    <div style="text-align: center;"><img src="images/logo.png"
-        alt=""></div>
-    <div style="text-align: center;">Joining together your ideas with our
-      expertise. </div>
-    <div style="text-align: center;">- Coming Soon -</div>
+    <div style="text-align: center;"><img src="file:///C:/Users/Peter/Documents/GitHub/consuit.github.io/images/logo.png"
+        alt="" style="width: 330px; height: 66px;"></div>
+    <div style="text-align: center;">
+      <p>Joining together your ideas with our expertise. </p>
+    </div>
+    <p> </p>
+    <div style="text-align: center;">
+      <p>- Coming Soon -</p>
+    </div>
+    <div style="text-align: center;">
+      <p><br>
+      </p>
+    </div>
+    <div style="text-align: center;">
+      <p>hello@consuit.co.uk</p>
+    </div>
   </body>
 </html>
