--- a/index.html
+++ b/index.html
@@ -5,22 +5,20 @@
     <title>test</title>
   </head>
   <body>
-    <div style="text-align: center;"><img src="images/logo.png"
-
+    <div style="text-align: center;"><img src="file:///C:/Users/Peter/Documents/GitHub/consuit.github.io/images/logo.png"
         alt="" style="width: 330px; height: 66px;"></div>
-    <div style="text-align: center;">
-      <p>Joining together your ideas with our expertise. </p>
+    <div style="text-align: center;"><br>
     </div>
-    <p> </p>
-    <div style="text-align: center;">
-      <p>- Coming Soon -</p>
-    </div>
-    <div style="text-align: center;">
-      <p><br>
-      </p>
-    </div>
-    <div style="text-align: center;">
-      <p>hello@consuit.co.uk</p>
-    </div>
+    <div style="text-align: center;"><span style="font-family: Verdana;">Joining
+        together your ideas with our expertise. <br>
+      </span></div>
+    <div style="text-align: center;"><span style="font-family: Verdana;"><br>
+      </span></div>
+    <div style="text-align: center;"><span style="font-family: Verdana;">-
+        Website Undergoing Maintenance -</span></div>
+    <div style="text-align: center;"><span style="font-family: Verdana;"><br>
+      </span></div>
+    <div style="text-align: center;"><span style="font-family: Verdana;"><strong>hello@consuit.co.uk<br>
+        </strong></span></div>
   </body>
 </html>
