--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>test</title>
   </head>
   <body>
-    <div style="text-align: center;"><img src="file:///C:/Users/Peter/Documents/GitHub/consuit.github.io/images/logo.png"
+    <div style="text-align: center;"><img src="images/logo.png"
+
         alt="" style="width: 330px; height: 66px;"></div>
     <div style="text-align: center;"><br>
     </div>
